# llmops-observability-lab

./: README.md
day01-python/: main.py  pyproject.toml
day01-python/src/hn/: main.py
day01-python/tests/: conftest.py  test_main.py
day03-anthropic/: main.py  pyproject.toml
day03-anthropic/src/claude_lab/: client.py  hello.py  main.py  stream.py  usage.py
day03-anthropic/tests/: test_client.py
day04-tools/: main.py  pyproject.toml
day04-tools/src/tools_lab/: multi_tools.py  simple_tool.py
day04-tools/tests/: test_multi_tools.py
day05-streaming/: main.py  pyproject.toml
day05-streaming/src/streaming_lab/: basic_stream.py  cancellable.py  raw_events.py  streaming_agent.py
day05-streaming/tests/: test_streaming_agent.py
day06-embeddings/: main.py  pyproject.toml
day06-embeddings/src/emb_lab/: hello_embed.py  search_demo.py  similarity.py
day06-embeddings/tests/: test_similarity.py
day08-observability/: .env.example
day08-observability/lf-client/: EVAL_RESULTS.md  docker-compose.qdrant.yml  inspect_lf.py  main.py  pyproject.toml
day08-observability/lf-client/src/lf_client/: bm25_index.py  cache_savings.py  caching_demo.py  cb_demo.py  chat_session.py  circuit_breaker.py  client.py  compare_retrieval.py  embedding_service.py  eval_data.py  eval_metrics.py  eval_runner.py  fallback.py  flaky_client.py  grounded_generator.py  hello_trace.py  hybrid_search.py  index_cookbook.py  inspect_otel.py  ipynb_parse.py  main.py  md_chunking.py  md_parse.py  multi_query_demo.py  multi_query_retrieval.py  observed_agent.py  otel_hello.py  qdrant_filter.py  qdrant_hello.py  qdrant_index.py  qdrant_search.py  query_decomposer.py  rag_demo.py  rag_simulation.py  reranker.py  resilient_demo.py  retrieval.py  retry_demo.py  search_cookbook.py  sessions_via_otel.py  (+2 more)
day08-observability/lf-client/tests/: test_circuit_breaker.py  test_client.py  test_eval_metrics.py  test_grounded_generator.py  test_multi_query.py  test_observed_agent.py  test_usage.py
