[project]
name = "day05-streaming"
version = "0.1.0"
description = "Day 3 — Anthropic SDK basics: messages, streaming, cost tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streaming_lab"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["method-assign"]
