[project]
name = "lf_client"
version = "0.1.0"
description = "Day 3 — Anthropic SDK basics: messages, streaming, cost tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lf_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "voyageai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["method-assign"]

[[tool.mypy.overrides]]
module = "nbformat.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rank_bm25.*"
ignore_missing_imports = true

[tool.ruff]
extend-exclude = ["data"]
